[package]
name = "structured"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.1"
bbs = "0.4.1"
pairing-plus = "0.19"
rand_core = "0.5"
rand_xorshift = "0.2"
ff-zeroize = { version = "0.6.3", features = ["derive"]}
zeroize = { version  = "1.1", features = ["zeroize_derive"]}
criterion = "0.3"

[[bench]]
name = "evaluation"
harness = false